<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.interviewlibrary.viewmodel.LibHomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.LibHomeActivity">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/shape_orange_solid_rect"
            android:onClick="@{()->viewmodel.triggerpayment()}"
            android:text="@string/payment"
            android:textColor="@color/gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/shape_orange_solid_rect"
            android:onClick="@{()->viewmodel.signoutt()}"
            android:text="@string/signout"
            android:textColor="@color/gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/shape_orange_solid_rect"
            android:onClick="@{()->viewmodel.exit()}"
            android:text="@string/exit"
            android:textColor="@color/gray" />

    </LinearLayout>
</layout>